--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gerenciamento-de-usuarios",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
